<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">v2rayNG</string>
    <string name="app_widget_name">Switch</string>
    <string name="app_tile_name">Switch</string>
    <string name="app_tile_first_use">First use of this feature, please use the app to activate VPN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Notifications -->
    <string name="notification_action_stop_v2ray">Stop</string>
    <string name="toast_permission_denied">Unable to obtain the permission</string>
    <string name="notification_action_more">click for more</string>
    <string name="toast_services_start">Start Services</string>
    <string name="toast_services_stop">Stop Services</string>
    <string name="toast_services_success">Start Services Success</string>
    <string name="toast_services_failure">Start Services Failure</string>

    <!--ServerActivity-->
    <string name="title_server">Configuration file</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="menu_item_save_config">Save config</string>
    <string name="menu_item_del_config">Delete config</string>
    <string name="menu_item_import_config_qrcode">Import config from QRcode</string>
    <string name="menu_item_import_config_clipboard">Import config from Clipboard</string>
    <string name="menu_item_import_config_manually_vmess">Type manually[Vmess]</string>
    <string name="menu_item_import_config_manually_ss">Type manually[Shadowsocks]</string>
    <string name="menu_item_import_config_custom">custom config</string>
    <string name="menu_item_import_config_custom_clipboard">Import custom config from Clipboard</string>
    <string name="menu_item_import_config_custom_local">Import custom c from locally</string>
    <string name="menu_item_import_config_custom_url">Import custom config from URL</string>
    <string name="menu_item_import_config_custom_url_scan">Import custom config scan URL</string>
    <string name="del_config_comfirm">Confirm delete？</string>
    <string name="server_lab_remarks">remarks</string>
    <string name="server_lab_address">address</string>
    <string name="server_lab_port">port</string>
    <string name="server_lab_id">id</string>
    <string name="server_lab_alterid">alterId</string>
    <string name="server_lab_security">security</string>
    <string name="server_lab_network">network</string>
    <string name="server_lab_more_function">more function</string>
    <string name="server_lab_head_type">head type</string>
    <string name="server_lab_request_host">request host(host/ws host/h2 host)</string>
    <string name="server_lab_path">path(ws path/h2 path)</string>
    <string name="server_lab_stream_security">tls</string>
    <string name="server_lab_allow_insecure">allowInsecure</string>
    <string name="server_lab_address3">address</string>
    <string name="server_lab_port3">port</string>
    <string name="server_lab_id3">password</string>
    <string name="server_lab_security3">security</string>
    <string name="toast_success">Success</string>
    <string name="toast_failure">Failure</string>
    <string name="toast_none_data">There is nothing</string>
    <string name="toast_incorrect_protocol">Incorrect protocol</string>
    <string name="toast_decoding_failed">Decoding failed</string>
    <string name="title_file_chooser">Select a Config File</string>
    <string name="toast_require_file_manager">Please install a File Manager.</string>
    <string name="server_customize_config">Customize Config</string>
    <string name="toast_config_file_invalid">Invalid Config</string>
    <string name="server_lab_content">Content</string>
    <string name="toast_none_data_clipboard">There is no data in the clipboard</string>
    <string name="toast_invalid_url">Invalid URL</string>
    <string name="server_lab_need_inbound">Ensure inbound has socks proxy port 10808</string>

    <!-- PerAppProxyActivity -->
    <string name="msg_dialog_progress">Loading</string>
    <string name="menu_item_select_all">Select all</string>
    <string name="msg_enter_keywords">Enter keywords</string>
    <string name="switch_bypass_apps_mode">Bypass Mode</string>
    <string name="menu_item_select_proxy_app">Auto select proxy app</string>
    <string name="msg_downloading_content">Downloading content</string>


    <!-- Preferences -->
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_advanced">Advanced Settings</string>

    <string name="title_pref_per_app_proxy">Per-app proxy</string>
    <string name="summary_pref_per_app_proxy">Per-app proxy mode only support Android 5.0 Lollipop or higher</string>

    <string name="title_pref_mux_enabled">Enable Mux</string>
    <string name="summary_pref_mux_enabled">Enable maybe speed up network and switch network maybe flash</string>

    <string name="title_pref_speed_enabled">Enable speed display</string>
    <string name="summary_pref_speed_enabled">Display current speed in the notification</string>

    <string name="title_pref_local_dns_enabled">Enable local DNS</string>
    <string name="summary_pref_local_dns_enabled">overture(DNS port:8053)</string>

    <string name="title_pref_routing_domain_strategy">Domain strategy</string>
    <string name="title_pref_routing">Routing mode</string>
    <string name="summary_pref_routing">Custom routing</string>

    <string name="title_pref_donate">Donate</string>
    <string name="summary_pref_donate">Donate developer</string>
    <string name="donate_detail">Add some experimental advanced features</string>

    <string name="title_pref_remote_dns">DNS(Optional)</string>
    <string name="summary_pref_remote_dns">DNS</string>

    <string name="title_pref_socks_port">SOCKS5 proxy port</string>
    <string name="summary_pref_socks_port">SOCKS5 proxy port</string>

    <string name="title_pref_lanconn_port">HTTP proxy port(0=not allowed)</string>
    <string name="summary_pref_lanconn_port">HTTP proxy port</string>

    <string name="title_pref_speedup_domain">Speedup domain name resolution</string>
    <string name="summary_pref_speedup_domain">Valid only for http/tls</string>

    <string name="title_pref_feedback">Feedback</string>
    <string name="summary_pref_feedback">Feedback enhancements or bugs to GitHub</string>
    <string name="summary_pref_tg_group">Join Telegram Group</string>
    <string name="toast_tg_app_not_found">Telegram app not found</string>

    <string name="title_pref_version">Version</string>

    <string name="donate_error_setup">Error Setup:</string>
    <string name="donate_error_inventory">Error querying inventory</string>
    <string name="donate_error_purchase1">Error Purchase:</string>
    <string name="donate_error_purchase2">Error Purchase,Authenticity verification failed.</string>
    <string name="donate_success_purchase">Thank you for your donation!</string>
    <string name="donate_item_click">Donate</string>
    <string name="donate_item_paypal">Paypal</string>

    <string name="title_logcat">Logcat</string>
    <string name="logcat_copy">Copy</string>
    <string name="title_export_all">Export all config to clipboard</string>
    <string name="title_sub_setting">subscription setting</string>
    <string name="sub_setting_remarks">remarks</string>
    <string name="sub_setting_url">url</string>
    <string name="title_sub_update">Update subscription</string>

    <string name="tasker_start_service">Start Service</string>
    <string name="tasker_setting_confirm">Confirm</string>

    <string name="routing_settings_title">Routing Settings</string>
    <string name="routing_settings_tips">Separated by commas(,),remember to save</string>
    <string name="routing_settings_save">Save</string>
    <string name="routing_settings_delete">Clear</string>
    <string name="routing_settings_scan_replace">Scan and replace</string>
    <string name="routing_settings_scan_append">Scan and append</string>
    <string name="routing_settings_default_rules"> set default routing rules</string>

    <string name="connection_test_pending">Check Connectivity</string>
    <string name="connection_test_testing">Testing…</string>
    <string name="connection_test_available">Success: HTTPS handshake took %dms</string>
    <string name="connection_test_error">Fail to detect internet connection: %s</string>
    <string name="connection_test_fail">Internet Unavailable</string>
    <string name="connection_test_error_status_code">Error code: #%d</string>
    <string name="connection_connected">Connected, tap to check connection</string>
    <string name="connection_not_connected">Not connected</string>

    <string-array name="share_method">
        <item>QRcode</item>
        <item>Export to clipboard</item>
        <item>Export full configuration to clipboard</item>
    </string-array>

    <string-array name="routing_tag">
        <item>proxy URL or IP</item>
        <item>direct URL or IP</item>
        <item>blocked URL or IP</item>
    </string-array>

    <string-array name="routing_mode">
        <item>Global</item>
        <item>Bypassing the LAN address</item>
        <item>Bypass mainland address</item>
        <item>Bypassing LAN and mainland address</item>
    </string-array>

</resources>
