<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/title_settings">
        <!--<CheckBoxPreference-->
        <!--android:key="pref_bypass_mainland"-->
        <!--android:summary="@string/summary_pref_bypass_mainland"-->
        <!--android:title="@string/title_pref_bypass_mainland" />-->
        <CheckBoxPreference
            android:key="pref_per_app_proxy"
            android:summary="@string/summary_pref_per_app_proxy"
            android:title="@string/title_pref_per_app_proxy" />

        <CheckBoxPreference
            android:key="pref_mux_enabled"
            android:summary="@string/summary_pref_mux_enabled"
            android:title="@string/title_pref_mux_enabled" />

        <EditTextPreference
            android:defaultValue="8.8.8.8,8.8.4.4"
            android:key="pref_remote_dns"
            android:summary="@string/summary_pref_remote_dns"
            android:title="@string/title_pref_remote_dns" />

        <!--<CheckBoxPreference-->
            <!--android:key="pref_speedup_domain"-->
            <!--android:summary="@string/summary_pref_speedup_domain"-->
            <!--android:title="@string/title_pref_speedup_domain" />-->

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_advanced">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/routing_mode"
            android:entryValues="@array/routing_mode_value"
            android:key="pref_routing_mode"
            android:summary="%s"
            android:title="@string/title_pref_routing" />

        <Preference
            android:key="pref_routing"
            android:summary="@string/summary_pref_routing"
            android:title="@string/summary_pref_routing" />

        <Preference
            android:key="pref_donate"
            android:summary="@string/summary_pref_donate"
            android:title="@string/title_pref_donate" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_about">
        <!--<Preference-->
        <!--android:key="pref_licenses"-->
        <!--android:title="@string/notices_title" />-->

        <Preference
            android:key="pref_feedback"
            android:summary="@string/summary_pref_feedback"
            android:title="@string/title_pref_feedback" />

        <Preference
            android:key="pref_version"
            android:title="@string/title_pref_version" />
    </PreferenceCategory>
</PreferenceScreen>